<resources>
    <string name="app_name">工程项目管理</string>

    <string name="scale_down_show_behavior">com.example.q_kang.pmsystem.widget.behavior.ScaleDownShowBehavior</string>

    <string name="work">工作</string>
    <string name="message">消息</string>
    <string name="message_title">消息中心</string>
    <string name="frame">组织</string>
    <string name="frame_title">组织架构</string>
    <string name="mine">我的</string>
    <string name="mine_title">个人中心</string>

    <string name="loading">加载中</string>
    <string name="loading_fail">加载失败</string>
    <string name="loading_success">加载成功</string>

    <string name="uploading">上传中</string>
    <string name="uploading_fail">上传失败</string>
    <string name="uploading_success">上传成功</string>

    <string name="search">输入关键字搜索</string>
    <string name="edit">编辑</string>
    <string name="submit">提交</string>
    <string name="save">保存</string>

    <string name="complete">完成</string>
    <string name="confirm">确定</string>
    <string name="cancle">取消</string>


    <!--calendar-->
    <string name="calendar_today">今天</string>
    <string-array name="calendar_month">
        <item>1月</item>
        <item>2月</item>
        <item>3月</item>
        <item>4月</item>
        <item>5月</item>
        <item>6月</item>
        <item>7月</item>
        <item>8月</item>
        <item>9月</item>
        <item>10月</item>
        <item>11月</item>
        <item>12月</item>
    </string-array>
    <string name="calendar_day">%d 日</string>
    <string name="calendar_year">%d--</string>

    <!--组织架构-->
    <!--<string name="company">长垣县规划局</string>-->
    <string name="company">组织架构人员</string>
    <string name="addressbook">通讯录</string>
    <string name="phonebook">手机通讯录</string>
    <string name="organization_chart">组织架构</string>
    <string name="myfriend">我的客户</string>
    <string name="mygroup">我的群组</string>
    <string name="addin">添加</string>

    <!--项目创建-->
    <string name="creatproject">新建项目</string>
    <string name="projectname">项目名称：</string>
    <string name="projectStartTime">***开始时间：</string>
    <string name="projectEndTime">***结束时间：</string>
    <string name="projectLocation">***项目位置：</string>
    <string name="projectFuZeRen">负责人：</string>
    <string name="projectMember">参与人员：</string>
    <string name="projectDepartment">责任部门：</string>
    <string name="projectModel">选择工作模板</string>
    <string name="eventModel">选择事件模板</string>

    <!--项目模板-->
    <string name="model_new">新建模板</string>
    <string name="model_one">模板一</string>
    <string name="model_two">模板二</string>
    <string name="model_three">模板三</string>

    <!--录音-->
    <string name="up_for_cancel">手指上滑，取消发送</string>
    <string name="want_to_cancle">松开手指，取消发送</string>
    <string name="time_too_short">录音时间过短</string>

    <string name="long_click_record">长按 录音</string>
    <string name="hang_up_finsh">松开 结束</string>
    <string name="release_cancel">松开 取消</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_project_detail">ProjectDetailActivity</string>
    <string name="large_text">
        "Material is the metaphor.\n\n"

        "A material metaphor is the unifying theory of a rationalized space and a system of motion."
        "The material is grounded in tactile reality, inspired by the study of paper and ink, yet "
        "technologically advanced and open to imagination and magic.\n"
        "Surfaces and edges of the material provide visual cues that are grounded in reality. The "
        "use of familiar tactile attributes helps users quickly understand affordances. Yet the "
        "flexibility of the material creates new affordances that supercede those in the physical "
        "world, without breaking the rules of physics.\n"
        "The fundamentals of light, surface, and movement are key to conveying how objects move, "
        "interact, and exist in space and in relation to each other. Realistic lighting shows "
        "seams, divides space, and indicates moving parts.\n\n"

        "Bold, graphic, intentional.\n\n"

        "The foundational elements of print based design typography, grids, space, scale, color, "
        "and use of imagery guide visual treatments. These elements do far more than please the "
        "eye. They create hierarchy, meaning, and focus. Deliberate color choices, edge to edge "
        "imagery, large scale typography, and intentional white space create a bold and graphic "
        "interface that immerse the user in the experience.\n"
        "An emphasis on user actions makes core functionality immediately apparent and provides "
        "waypoints for the user.\n\n"

        "Motion provides meaning.\n\n"

        "Motion respects and reinforces the user as the prime mover. Primary user actions are "
        "inflection points that initiate motion, transforming the whole design.\n"
        "All action takes place in a single environment. Objects are presented to the user without "
        "breaking the continuity of experience even as they transform and reorganize.\n"
        "Motion is meaningful and appropriate, serving to focus attention and maintain continuity. "
        "Feedback is subtle yet clear. Transitions are efﬁcient yet coherent.\n\n"

        "3D world.\n\n"

        "The material environment is a 3D space, which means all objects have x, y, and z "
        "dimensions. The z-axis is perpendicularly aligned to the plane of the display, with the "
        "positive z-axis extending towards the viewer. Every sheet of material occupies a single "
        "position along the z-axis and has a standard 1dp thickness.\n"
        "On the web, the z-axis is used for layering and not for perspective. The 3D world is "
        "emulated by manipulating the y-axis.\n\n"

        "Light and shadow.\n\n"

        "Within the material environment, virtual lights illuminate the scene. Key lights create "
        "directional shadows, while ambient light creates soft shadows from all angles.\n"
        "Shadows in the material environment are cast by these two light sources. In Android "
        "development, shadows occur when light sources are blocked by sheets of material at "
        "various positions along the z-axis. On the web, shadows are depicted by manipulating the "
        "y-axis only. The following example shows the card with a height of 6dp.\n\n"

        "Resting elevation.\n\n"

        "All material objects, regardless of size, have a resting elevation, or default elevation "
        "that does not change. If an object changes elevation, it should return to its resting "
        "elevation as soon as possible.\n\n"

        "Component elevations.\n\n"

        "The resting elevation for a component type is consistent across apps (e.g., FAB elevation "
        "does not vary from 6dp in one app to 16dp in another app).\n"
        "Components may have different resting elevations across platforms, depending on the depth "
        "of the environment (e.g., TV has a greater depth than mobile or desktop).\n\n"

        "Responsive elevation and dynamic elevation offsets.\n\n"

        "Some component types have responsive elevation, meaning they change elevation in response "
        "to user input (e.g., normal, focused, and pressed) or system events. These elevation "
        "changes are consistently implemented using dynamic elevation offsets.\n"
        "Dynamic elevation offsets are the goal elevation that a component moves towards, relative "
        "to the component’s resting state. They ensure that elevation changes are consistent "
        "across actions and component types. For example, all components that lift on press have "
        "the same elevation change relative to their resting elevation.\n"
        "Once the input event is completed or cancelled, the component will return to its resting "
        "elevation.\n\n"

        "Avoiding elevation interference.\n\n"

        "Components with responsive elevations may encounter other components as they move between "
        "their resting elevations and dynamic elevation offsets. Because material cannot pass "
        "through other material, components avoid interfering with one another any number of ways, "
        "whether on a per component basis or using the entire app layout.\n"
        "On a component level, components can move or be removed before they cause interference. "
        "For example, a floating action button (FAB) can disappear or move off screen before a "
        "user picks up a card, or it can move if a snackbar appears.\n"
        "On the layout level, design your app layout to minimize opportunities for interference. "
        "For example, position the FAB to one side of stream of a cards so the FAB won’t interfere "
        "when a user tries to pick up one of cards.\n\n"
    </string>
    <string name="action_settings">Settings</string>


    <string name="data_bottom">我也是有底线哒~</string>
    <string name="no_net"></string>


</resources>
