<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.design.widget.CoordinatorLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:visibility="gone">

        <android.support.design.widget.AppBarLayout
            android:id="@+id/appBarLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:theme="@style/AppTheme.AppBarOverlay">

            <android.support.v7.widget.Toolbar
                android:id="@+id/toolbar"
                android:layout_width="match_parent"
                android:layout_height="?attr/actionBarSize"
                android:background="@color/white"
                app:layout_scrollFlags="scroll|enterAlways"
                app:popupTheme="@style/AppTheme.PopupOverlay">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="@dimen/dp_12"
                    android:text="@string/addressbook"
                    android:textColor="@color/black"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <ImageView
                    android:id="@+id/iv_frame_search"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="right"
                    android:padding="@dimen/dp_10"
                    android:src="@drawable/ic_search_toolbar" />


            </android.support.v7.widget.Toolbar>

        </android.support.design.widget.AppBarLayout>
    </android.support.design.widget.CoordinatorLayout>

    <!--<LinearLayout-->
    <!--android:layout_width="match_parent"-->
    <!--android:layout_height="1dp"-->
    <!--android:background="#c2c2c2" />-->

    <com.scwang.smartrefresh.layout.SmartRefreshLayout
        android:id="@+id/srl_frame_list"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#efefef">

        <com.scwang.smartrefresh.header.MaterialHeader
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="50dp" />
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/light_cut_line">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:descendantFocusability="blocksDescendants"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="52dp"
                android:background="@color/white"
                android:drawableLeft="@drawable/ic_aite"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="20dp"
                android:text="@string/company"
                android:textColor="@color/black"
                android:textSize="16sp"
                android:textStyle="bold" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/light_cut_line" />


            <TextView
                android:visibility="gone"
                android:id="@+id/tv_frame_phone"
                android:layout_width="match_parent"
                android:layout_height="@dimen/child_height"
                android:drawableLeft="@mipmap/logo"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/phonebook"
                android:textColor="#000"
                android:textSize="@dimen/sp_16" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/light_cut_line" />


            <TextView
                android:visibility="gone"
                android:id="@+id/tv_frame_organization"
                android:layout_width="match_parent"
                android:layout_height="@dimen/child_height"
                android:drawableLeft="@mipmap/logo"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/organization_chart"
                android:textColor="#000"
                android:textSize="@dimen/sp_16" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/light_cut_line" />


            <TextView
                android:visibility="gone"
                android:id="@+id/tv_frame_friends"
                android:layout_width="match_parent"
                android:layout_height="@dimen/child_height"
                android:drawableLeft="@mipmap/logo"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/myfriend"
                android:textColor="#000"
                android:textSize="@dimen/sp_16" />

            <LinearLayout
                android:visibility="gone"
                android:layout_width="match_parent"
                android:layout_height="0.5dp"
                android:background="@color/light_cut_line" />

            <TextView
                android:visibility="gone"
                android:id="@+id/tv_frame_group"
                android:layout_width="match_parent"
                android:layout_height="@dimen/child_height"
                android:drawableLeft="@mipmap/logo"
                android:drawablePadding="10dp"
                android:gravity="center_vertical"
                android:paddingLeft="10dp"
                android:text="@string/mygroup"
                android:textColor="#000"
                android:textSize="@dimen/sp_16" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/light_cut_line" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_all"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </RelativeLayout>


        </LinearLayout>

    </ScrollView>

    </com.scwang.smartrefresh.layout.SmartRefreshLayout>
</LinearLayout>