<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.q_kang.pmsystem.ui.activity.frame.FrameFragmentActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/bottom_navigation_height">

        <TextView
            android:id="@+id/tv_frag_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:text="@string/organization_chart"
            android:textColor="@color/black"
            android:textSize="18sp"
            android:textStyle="bold" />

        <ImageView
            android:id="@+id/iv_frag_back"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_alignParentLeft="true"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_gravity="center_vertical"
            android:paddingLeft="12dp"
            android:paddingRight="8dp"
            android:src="@drawable/ic_back" />

        <LinearLayout
            android:id="@+id/ll_frag_search"
            android:layout_width="match_parent"
            android:layout_height="@dimen/bottom_navigation_height"
            android:orientation="horizontal"
            android:visibility="gone">

            <ImageView
                android:id="@+id/iv_frag_search_back"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="center_vertical"
                android:paddingLeft="12dp"
                android:paddingRight="8dp"
                android:src="@drawable/ic_back" />

            <EditText
                android:id="@+id/et_frag_search"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_margin="@dimen/dp_10"
                android:layout_weight="1"
                android:background="@drawable/input_box"
                android:drawableLeft="@drawable/ic_search_small"
                android:drawablePadding="8dp"
                android:hint="@string/search"
                android:padding="8dp"
                android:textSize="14sp" />

        </LinearLayout>

    </RelativeLayout>

    <TextView
        android:id="@+id/tv_frag_search"
        android:layout_width="match_parent"
        android:layout_height="36dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:background="@drawable/input_box"
        android:drawableLeft="@drawable/ic_search_small"
        android:drawablePadding="8dp"
        android:padding="8dp"
        android:textSize="14sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="4dp"
        android:gravity="center_vertical"
        android:padding="8dp"
        android:text="@string/company"
        android:textColor="@color/blue"
        android:textSize="16sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="12dp"
        android:background="@color/light_cut_line" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <android.support.v7.widget.RecyclerView
                    android:id="@+id/recycler_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_alignParentStart="true"
                    android:layout_alignParentTop="true" />

            </RelativeLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="12dp"
                android:background="@color/light_cut_line" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:drawableLeft="@drawable/ic_circle_add"
                android:drawablePadding="@dimen/dp_10"
                android:gravity="center_vertical"
                android:paddingLeft="@dimen/dp_10"
                android:text="邀请同事加入"
                android:textColor="@color/black9"
                android:textSize="16sp" />

        </LinearLayout>

    </ScrollView>

    <FrameLayout
        android:id="@+id/frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="8dp"
        android:visibility="gone"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">

    </FrameLayout>

</LinearLayout>
