<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.NestedScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.q_kang.pmsystem.ui.activity.project.ProjectDetailActivity"
    tools:showIn="@layout/activity_project_detail">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <android.support.v7.widget.CardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <View
                    android:layout_width="match_parent"
                    android:layout_height="12dp"
                    android:background="#eee" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:layout_weight="2"
                        android:text="@string/projectname"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_detail_name"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:textColor="@color/textcolor"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eee" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:layout_weight="2"
                        android:text="@string/projectFuZeRen"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_detail_fuzeren"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:textColor="@color/textcolor"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eee" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:layout_weight="2"
                        android:text="@string/projectMember"
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_detail_member"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:textColor="@color/textcolor"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eee" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:layout_weight="2"
                        android:text="开始时间："
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_detail_begintime"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:textColor="@color/textcolor"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eee" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="35dp">

                    <TextView
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center_vertical"
                        android:layout_marginStart="12dp"
                        android:layout_weight="2"
                        android:text="结束时间："
                        android:textColor="#000"
                        android:textSize="12sp" />

                    <TextView
                        android:id="@+id/tv_detail_endtime"
                        android:layout_width="0dp"
                        android:layout_height="match_parent"
                        android:layout_weight="5"
                        android:background="@null"
                        android:gravity="center_vertical"
                        android:textColor="@color/textcolor"
                        android:textSize="12sp" />
                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="#eee" />

            </LinearLayout>

        </android.support.v7.widget.CardView>

        <View
            android:layout_width="match_parent"
            android:layout_height="12dp"
            android:background="#eee" />

        <android.support.v4.view.ViewPager
            android:id="@+id/vp_project_work"
            android:layout_width="match_parent"
            android:layout_height="330dp"
            android:layout_gravity="bottom"
            android:clipToPadding="false"
            android:overScrollMode="never"
            android:paddingBottom="30dp"
            android:paddingEnd="@dimen/card_padding"
            android:paddingLeft="@dimen/card_padding"
            android:paddingRight="@dimen/card_padding"
            android:paddingStart="@dimen/card_padding" />
    </LinearLayout>

</android.support.v4.widget.NestedScrollView>
